...

  OutlinedTextField(
    value = newPost,
    onValueChange = { newPost = it },
    modifier = modifier
      .fillMaxWidth()
      .testTag("newPostBar"),
    leadingIcon = {
      IconButton(
        onClick = {
          newPost = TextFieldValue()
        },
        modifier = Modifier.testTag("clearNewPost")
...
              date = Date().time,
              message = newPost.text,
            )
          )
          newPost = TextFieldValue()
        },
        modifier = Modifier.testTag("submitNewPost")
      ) {
        Icon(
          imageVector = Icons.AutoMirrored.Filled.Send,
          contentDescription = stringResource(R.string.submit_new_post)
        )
      }
...
