...
  OutlinedTextField(
    value = searchQuery.value,
    onValueChange = { searchQuery.value = it },

    modifier = modifier
        .fillMaxWidth()
        .testTag("searchBar"),
    label = {
      Text(stringResource(R.string.search_posts))
    },
    leadingIcon = {
      IconButton(onClick = { searchQuery.value = TextFieldValue() }) {
        Icon(
...
