...

  LazyColumn(
    modifier = Modifier
        .fillMaxSize()
        .padding(horizontal = 16.dp)
        .padding(bottom = 16.dp)
        .testTag("postsList"),
    // Provide a default vertical spacing for the column
    verticalArrangement = Arrangement.spacedBy(8.dp),
  ) {
    // We add views to a lazy column with the `item` API
    // We provide a key so if position changes with a state change, compose can still remember
    // the state
...
